--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.16.1",
+    "cookie-parser": "^1.4.3",
     "ejs": "^2.5.6",
     "express": "^4.14.1",
     "express-ejs-layouts": "^2.2.0",
+    "express-session": "^1.15.1",
     "method-override": "^2.3.7",
     "mongoose": "^4.8.3",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "passport": "^0.3.2",
+    "passport-local": "^1.0.0"
   }
 }
